Add margin auto to the chart

--- a/index.html
+++ b/index.html
@@ -2,20 +2,19 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" type="text/css" href="./public/css/style.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" type="text/css" href="./public/css/style.css" />
     <link href="https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,400;0,700;1,300;1,400&display=swap"
-        rel="stylesheet">
+        rel="stylesheet" />
     <title>Landing Page</title>
 </head>
-
 
 <body>
     <header>
         <div class="header-container">
             <div>
-                <img class="logo" src="./public/images/logo.png" alt="logo">
+                <img class="logo" src="./public/images/logo.png" alt="logo" />
             </div>
             <div>
                 <div class="h1">Debbie</div>
@@ -23,47 +22,41 @@
             <div>
                 <a class="cta" href="#"><button>Sign Up Now!</button></a>
             </div>
-
         </div>
+        <iframe allow="microphone;" width="350" height="430"
+            src="https://console.dialogflow.com/api-client/demo/embedded/355c213a-2ae3-4f3f-8c92-d105b46e6b90">
+        </iframe>
     </header>
 
-    <div><img src="./public/images/super_woman.svg" alt="super_woman_img" class="super_woman"></div>
+    <div>
+        <img src="./public/images/super_woman.svg" alt="super_woman_img" class="super_woman" />
+    </div>
 
     <div class="main-container">
         <div>
-            <p class="hero-text">Managing pain can be hard. Debbie is here to help you! <br><i>Available on Google
-                    Assistant
-                    and Alexa.
-                </i><br>"Hey Google,
-                get help from Debbie" </p>
+            <p class="hero-text">
+                Managing pain can be hard. Debbie is here to help you! <br /><i>Available on Google Assistant and Alexa.
+                </i><br />"Hey Google, get help from Debbie"
+            </p>
         </div>
-
-
         <div>
-            <a class="cta" href="#"><button>Sign Up Now!</button></a></div>
+            <a class="cta" href="#"><button>Sign Up Now!</button></a>
+        </div>
         <div class="sub-text">
-            Debbie had a successful career in IT for many year before her chronic arthritis became too much.
-            <br>Having
-            struggled
-            to find any specialist who could help, <br>a friend came across a cognitive pain management course and
-            paper
-            toolset,
+            Debbie had a successful career in IT for many year before her chronic
+            arthritis became too much.
+            <br />Having struggled to find any specialist who could help, <br />a
+            friend came across a cognitive pain management course and paper toolset,
             and the idea for a pain management app was born.
         </div>
         <div class="statement-1">Build your confidence day by day</div>
+        <div class="second-container">
+            <img src="./public/images/success.svg" alt="success-icon" class="icon" />
+            <img src="./public/images/like.svg" alt="heart-icon" class="icon" />
+            <img src="./public/images/bell.svg" alt="bell-icon" class="icon" />
+            <img src="./public/images/exercise.svg" alt="exercise-icon" class="icon" />
+        </div>
     </div>
-    <div class="second-container"><img src="./public/images/success.svg" alt="success-icon" class="icon">
-        <img src="./public/images/like.svg" alt="heart-icon" class="icon">
-        <img src="./public/images/bell.svg" alt="bell-icon" class="icon">
-        <img src="./public/images/exercise.svg" alt="exercise-icon" class="icon">
-    </div>
-
-    </div>
-
-
-
-
-
 </body>
 
 </html>
